[package]
name = "anyhow-to-actix-error"
version = "0.1.0"
edition = "2021"
description = "Helpers to convert anyhow::Error to actix_web::Error"
license = "MIT"
repository = "https://github.com/caojen/anyhow_to_actix_error"
resolver = "1"
keywords = [
    "anyhow",
    "actix-web"
]

[dependencies]
anyhow = { version = "1" }
actix-web = { version = "4" }

[dev-dependencies]
tokio = { version = "1.39.2", features = ["full"] }
rand = { version = "0.8.5" }
